[package]
name = "bitcoin_logger"
version = "0.1.0"
authors = ["Riccardo Casatta <riccardo@casatta.it>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zmq = "0.9.2"
bitcoin = "0.25.2"
bitcoincore-rpc = "0.12.0"
serde = { version = "1.0.118", features = ["derive"] }
serde_cbor = "0.11.1"
flate2 = "1.0.19"
ctrlc = "3.1.7"
structopt = "0.3.21"
lru = "0.6.1"
log = "0.4.11"
env_logger = "0.8.2"
rand = "0.8.0"
#chrono = "0.4.19"

[[bin]]
name = "bitcoin-logger"
path = "src/bin/logger.rs"

[[bin]]
name = "bitcoin-csv"
path = "src/bin/csv.rs"

[[bin]]
name = "bitcoin-convert"
path = "src/bin/convert.rs"

[lib]
name = "bitcoin_logger"
path = "src/lib.rs"
